--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -88,7 +88,7 @@
         <!--John-->
         <div class="rootBooks">
             <div class="rootBooks__card">
-                <i class="rootBooks__card-bag" data-add-to-bag><svg xmlns="http://www.w3.org/2000/svg"
+                <button class="rootBooks__card__bag" data-add-to-bag><svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 15 14">
                         <symbol viewBox="0 0 15 14" id="svg-icon-shopping-bag">
                             <title>shopping-bag</title>
@@ -98,8 +98,8 @@
                             </g>
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-shopping-bag" />
-                    </svg></i>
-                <i class="rootBooks__card-heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
+                    </svg></button>
+                <i class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
                         <symbol viewBox="0 0 15 13.5" id="svg-icon-saved-items">
                             <title>saved-items</title>
                             <g fill="currentColor">
@@ -109,12 +109,13 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></i>
-                <img src="" alt="" class="rootBooks__card-img">
-                <div class="rootBooks__card-title">title</div>
-                <div class="rootBooks__card-price">30$</div>
+                <img src="" alt="" class="rootBooks__card__img">
+                <div class="rootBooks__card__title">title</div>
+                <div class="rootBooks__card__price">30$</div>
             </div>
             <div class="rootBooks__card">
-                <i class="rootBooks__card-bag"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 14">
+                <button class="rootBooks__card__bag" data-add-to-bag><svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 15 14">
                         <symbol viewBox="0 0 15 14" id="svg-icon-shopping-bag">
                             <title>shopping-bag</title>
                             <g fill="currentColor">
@@ -123,8 +124,8 @@
                             </g>
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-shopping-bag" />
-                    </svg></i>
-                <i class="rootBooks__card-heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
+                    </svg></button>
+                <i class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
                         <symbol viewBox="0 0 15 13.5" id="svg-icon-saved-items">
                             <title>saved-items</title>
                             <g fill="currentColor">
@@ -134,12 +135,13 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></i>
-                <img src="" alt="" class="rootBooks__card-img">
-                <div class="rootBooks__card-title">title</div>
-                <div class="rootBooks__card-price">30$</div>
+                <img src="" alt="" class="rootBooks__card__img">
+                <div class="rootBooks__card__title">title</div>
+                <div class="rootBooks__card__price">30$</div>
             </div>
             <div class="rootBooks__card">
-                <i class="rootBooks__card-bag"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 14">
+                <button class="rootBooks__card__bag" data-add-to-bag><svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 15 14">
                         <symbol viewBox="0 0 15 14" id="svg-icon-shopping-bag">
                             <title>shopping-bag</title>
                             <g fill="currentColor">
@@ -148,8 +150,8 @@
                             </g>
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-shopping-bag" />
-                    </svg></i>
-                <i class="rootBooks__card-heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
+                    </svg></button>
+                <i class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
                         <symbol viewBox="0 0 15 13.5" id="svg-icon-saved-items">
                             <title>saved-items</title>
                             <g fill="currentColor">
@@ -159,12 +161,13 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></i>
-                <img src="" alt="" class="rootBooks__card-img">
-                <div class="rootBooks__card-title">title</div>
-                <div class="rootBooks__card-price">30$</div>
+                <img src="" alt="" class="rootBooks__card__img">
+                <div class="rootBooks__card__title">title</div>
+                <div class="rootBooks__card__price">30$</div>
             </div>
             <div class="rootBooks__card">
-                <i class="rootBooks__card-bag"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 14">
+                <button class="rootBooks__card__bag" data-add-to-bag><svg xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 15 14">
                         <symbol viewBox="0 0 15 14" id="svg-icon-shopping-bag">
                             <title>shopping-bag</title>
                             <g fill="currentColor">
@@ -173,8 +176,8 @@
                             </g>
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-shopping-bag" />
-                    </svg></i>
-                <i class="rootBooks__card-heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
+                    </svg></button>
+                <i class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
                         <symbol viewBox="0 0 15 13.5" id="svg-icon-saved-items">
                             <title>saved-items</title>
                             <g fill="currentColor">
@@ -184,9 +187,9 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
                     </svg></i>
-                <img src="" alt="" class="rootBooks__card-img">
-                <div class="rootBooks__card-title">title</div>
-                <div class="rootBooks__card-price">30$</div>
+                <img src="" alt="" class="rootBooks__card__img">
+                <div class="rootBooks__card__title">title</div>
+                <div class="rootBooks__card__price">30$</div>
             </div>
         </div>
         <!--John-->
