--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/01fab75280.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body onload="handleGetData('customer')">
 
     <div class="header">
         <div class="usp__bar">
@@ -635,13 +635,13 @@
     <div id="rootCart"></div>
     <div id="wishList"></div>
 
-    <div id="root">
+    <div id="rootCustomer">
         
     </div>
 
 
-    <script src="dist/customer.js"> </script>
-    <script src="dist/owner.js"> </script>
+    <script src="dist/index.js"> </script>
+   
 </body>
 
 </html>
