--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/owner.html
@@ -9,16 +9,13 @@
 </head>
 <body>
     <form onsubmit="handleSubmit(event)" id="outfits">
-       <input type="text" required placeholder="Item" name="    ">
+       <input type="text" required placeholder="Item" name="description">
        <input type="number" required placeholder="Price" name="price">
        <input type="submit" value="submit">
     </form>
     <input type="submit" onclick="handleAsce(event)" name="asce" value="ascending">
     <input type="submit" onclick="handleDesce(event)" name="desce" value="descending">
-
     <div id = 'root'></div>
-    
-    
     <script src="dist/index.js"></script>
 
     <div class="root"></div>
