--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/jewelryGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/jewelryGucci.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 
-<body>
+<body onload="handleRenderByDepartment('jewelry')">
 
 
     <div class="container">
@@ -242,10 +242,10 @@
 
             <select class="catergory__buttons--selector" onchange='handleSelect(event)'>
                 <option value="" disabled selected>Category</option>
-                <option value="all">ALL</option>
-                <option value="dresses">DRESSES</option>
-                <option value="pants">PANTS</option>
-                <option value="shirts">SHIRT</option>
+                <option value="allJewelry">ALL</option>
+                <option value="rings">RINGS</option>
+                <option value="necklaces">NECKLACES</option>
+                
             </select>
 
             <div class="catergory__buttons--sortPrice">
