--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -17,7 +17,7 @@
     <title>Fu - Sushi Restaurant in Tel-Aviv</title>
 </head>
 
-<body>
+<body id="bodystore">
     <div class="blurwrapper"></div>
     <section class='home'>
         <div class="homeopacity">
@@ -183,29 +183,33 @@
 
                 <div class="popmenu__box__opacity">
 
-                    <div class="popmenu__box__opacity__navbar" id='navbar1'>
-                        <div>Firsts</div>
-                        <div>Soups</div>
-                        <div>Salads</div>
-                        <div>Buns</div>
-                        <div>Robta Yaki</div>
-                        <div>Gyoza</div>
-                        <div>Gonkan Maki</div>
-                        <div>Inside Out</div>
-                        <div>Specials</div>
-                        <div>Kids Dishes</div>
-                        <div>Main Dishes</div>
-                        
-                    </div>
+                    <div class="popmenu__box__opacity__wrapper">
 
-                    <div class="popmenu__box__opacity__navbar" id='navbar2'>
-                        <div>Wok</div>
-                        <div>Cokctails</div>
-                        <div>Combinations</div>
-                        <div>Sashimi</div>
-                        <div>Nigiri</div>
-                        <div>Sandwich Sushi</div>
-                        <div>Maki Sushi</div>
+                        <div class="popmenu__box__opacity__navbar" id='navbar1'>
+                            <div>Firsts</div>
+                            <div>Soups</div>
+                            <div>Salads</div>
+                            <div>Buns</div>
+                            <div>Robta Yaki</div>
+                            <div>Gyoza</div>
+                            <div>Gonkan Maki</div>
+                            <div>Inside Out</div>
+                            <div>Specials</div>
+                            <div>Kids Dishes</div>
+                            <div>Main Dishes</div>
+
+                        </div>
+
+                        <div class="popmenu__box__opacity__navbar" id='navbar2'>
+                            <div>Wok</div>
+                            <div>Cokctails</div>
+                            <div>Combinations</div>
+                            <div>Sashimi</div>
+                            <div>Nigiri</div>
+                            <div>Sandwich Sushi</div>
+                            <div>Maki Sushi</div>
+                        </div>
+
                     </div>
 
                     <div class="popmenu__box__grid" id="rootStore">
