--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/bagsGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/bagsGucci.html
@@ -229,7 +229,7 @@
         </div>
         <div class="catergory__buttons">
             <div class="catergory__name">
-                <h3><span>READY-TO-WEAR FOR WOMEN</span> | Clothes for Women</h3>
+                <h3><span>WOMEN</span> | Handbags</h3>
             </div>
 
 
