--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/childrenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/childrenGucci.html
@@ -232,7 +232,7 @@
 
         <div class="catergory__buttons">
             <div class="catergory__name">
-                <h3><span>READY-TO-WEAR FOR WOMEN</span> | Clothes for Women</h3>
+                <h3><span> CHILDREN </span> | Ready-to-wear for Children</h3>
             </div>
 
 
