--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/bagsGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/bagsGucci.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Montserrat:wght@100;200&display=swap"
         rel="stylesheet">
 
-    <title>Women Gucci</title>
+    <title>Handbags Gucci</title>
     <link rel="stylesheet" href="dist/style.css">
 </head>
 
@@ -244,6 +244,7 @@
                 <option value="allBags">ALL</option>
                 <option value="purses">PURSES</option>
                 <option value="backpack">BACKPACK</option>
+                
                 
             </select>
 
