--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/jewelryGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/jewelryGucci.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Montserrat:wght@100;200&display=swap"
         rel="stylesheet">
 
-    <title>Women Gucci</title>
+    <title>Jewelry Gucci</title>
     <link rel="stylesheet" href="dist/style.css">
 </head>
 
@@ -245,6 +245,7 @@
                 <option value="allJewelry">ALL</option>
                 <option value="rings">RINGS</option>
                 <option value="necklaces">NECKLACES</option>
+                <option value="earrings">EARRINGS</option>
                 
             </select>
 
