--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -246,7 +246,7 @@
                 <option value="" disabled selected>Category</option>
                 <option value="allWomen">ALL</option>
                 <option value="dresses">DRESSES</option>
-                <option value="skirts">SKIRTS</option>
+                <option value="sweaters">SWEATERS</option>
                 <option value="boots">BOOTS</option>
                 
                
