--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/customer.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <a href="owner.html">owner link</a>
+    <!-- <button onclick="handleGetProduct()">Get Products</button> -->
     <div class="main_navbar_top">
         <div class="_jordan"
             style="background-image: url(https://icon-library.com/images/air-jordan-icon/air-jordan-icon-24.jpg);">
