--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/owner.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
+    <a href="customer.html">customer store</a>
+    <button onclick="handleGetProduct()">Get Products</button>
     <form onsubmit="handleSubmit(event)" id="outfits">
        <input type="text" required placeholder="Item" name="description">
        <input type="number" required placeholder="Price" name="price">
