--- a/תרגול/08.02.22/noa/index.html
+++ b/תרגול/08.02.22/noa/index.html
@@ -18,7 +18,7 @@
         <input type="number" name="social security number" id="" placeholder="social security number">
         <input type="email" name="email" id="" placeholder="Email">
 
-        <p>type of form to send:</p>
+        <p>Type of form to send:</p>
         <div class="radio">
 
             <input type="radio" name="radio" id="radio1" placeholder="type">
@@ -35,7 +35,7 @@
         <input type="number" name="" placeholder="Account Number">
         <input type="number" name="" placeholder="Fund Number">
 
-        <p>Employment Type:</p>
+        <p>Employment type:</p>
         <div class="radio">
             <input type="radio" name="radio" id="Employee" value="Employee">
             <label for="Employee">Employee</label>
@@ -44,18 +44,18 @@
             <input type="radio" name="radio" id="Independent" value="Independent" >
             <label for="Independent">Independent</label>
         </div>
-        <p>Withdrawal Type:</p>
+        <p>Withdrawal type:</p>
         <div class="radio">
             <input type="radio" name="radio" id="Full Withdrawal" value="Full Withdrawal" >
-            <label for="Full Withdrawal">Full Withdrawal</label>
+            <label for="Full Withdrawal">Full withdrawal</label>
 
             <input type="radio" name="radio" id="Partial Withdrawal" value="Partial Withdrawal">
-            <label for="Partial Withdrawal">Partial Withdrawal</label>
+            <label for="Partial Withdrawal">Partial withdrawal</label>
 
             <input type="text" name="" id="Amount" placeholder="Amount" >
 
             <input type="radio" name="radio" id="Autometed Monthly Withdrawal" value="Autometed Monthly Withdrawal">
-            <label for="Autometed Monthly Withdrawal">Autometed Monthly Withdrawal</label>
+            <label for="Autometed Monthly Withdrawal">Autometed monthly withdrawal</label>
         </div>
             <button class="clear">Clear Form</button>
         <input type="submit" value="Send Form">
