--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNoGit/indexStore.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/gucciNoGit/indexStore.html
@@ -15,7 +15,7 @@
     <title>Gucci</title>
 </head>
 
-<body>
+<body onload="handleRenderAllItems()">
 
     <div class=" loop-opacity-layer ">&nbsp;</div>
     <div class="header">
