--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -99,7 +99,7 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-shopping-bag" />
                     </svg></button>
-                <i class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
+                <button class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
                         <symbol viewBox="0 0 15 13.5" id="svg-icon-saved-items">
                             <title>saved-items</title>
                             <g fill="currentColor">
@@ -108,7 +108,7 @@
                             </g>
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
-                    </svg></i>
+                    </svg></button>
                 <img src="" alt="" class="rootBooks__card__img">
                 <div class="rootBooks__card__title">title</div>
                 <div class="rootBooks__card__price">30$</div>
@@ -125,7 +125,7 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-shopping-bag" />
                     </svg></button>
-                <i class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
+                <button class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
                         <symbol viewBox="0 0 15 13.5" id="svg-icon-saved-items">
                             <title>saved-items</title>
                             <g fill="currentColor">
@@ -134,7 +134,7 @@
                             </g>
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
-                    </svg></i>
+                    </svg></button>
                 <img src="" alt="" class="rootBooks__card__img">
                 <div class="rootBooks__card__title">title</div>
                 <div class="rootBooks__card__price">30$</div>
@@ -151,7 +151,7 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-shopping-bag" />
                     </svg></button>
-                <i class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
+                <button class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
                         <symbol viewBox="0 0 15 13.5" id="svg-icon-saved-items">
                             <title>saved-items</title>
                             <g fill="currentColor">
@@ -160,7 +160,7 @@
                             </g>
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
-                    </svg></i>
+                    </svg></button>
                 <img src="" alt="" class="rootBooks__card__img">
                 <div class="rootBooks__card__title">title</div>
                 <div class="rootBooks__card__price">30$</div>
@@ -177,7 +177,7 @@
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-shopping-bag" />
                     </svg></button>
-                <i class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
+                <button class="rootBooks__card__heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 13.5">
                         <symbol viewBox="0 0 15 13.5" id="svg-icon-saved-items">
                             <title>saved-items</title>
                             <g fill="currentColor">
@@ -186,7 +186,7 @@
                             </g>
                         </symbol>
                         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-saved-items" />
-                    </svg></i>
+                    </svg></button>
                 <img src="" alt="" class="rootBooks__card__img">
                 <div class="rootBooks__card__title">title</div>
                 <div class="rootBooks__card__price">30$</div>
