--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -22,7 +22,8 @@
 
 <body onload="handleRenderByGender('women')" >
 
-
+    <!-- <div class="cart" style="position:sticky;width:300px;height:400px;background-color: green;top:30vh;z-index: 1;">    
+    </div> -->
 
     <div class="container">
 
@@ -274,6 +275,7 @@
 
 
         </div>
+        
 
 
         <div class="container__bottom">
@@ -329,7 +331,7 @@
 
 
         </div>
-        <p style="background: rgb(26, 25, 25); font-size: small; padding: 2em; margin-top: 0;">© 2016 - 2020 Guccio
+        <p style="background: rgb(26, 25, 25); font-size: small; padding: 2em; margin-top: 0;color:white">© 2016 - 2020 Guccio
             Gucci S.p.A. - All rights reserved. SIAE LICENCE # 2294/I/1936 and 5647/I/1936</p>
 
 
@@ -340,6 +342,7 @@
 
 
     </div>
+    
 
     <script src="dist/index.js"></script>
 
