--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/erp.html
@@ -39,7 +39,7 @@
     <div class="container__inputs">
         <form class="container__inputs__form" onsubmit="handleAddBook(event)">
             <input class="container__inputs__form__inp" type="text" name="title" id="title" placeholder="Title">
-            <input class="container__inputs__form__inp" type="text" name="autor" id="autor" placeholder="Autor">
+            <input class="container__inputs__form__inp" type="text" name="author" id="author" placeholder="Author">
             <input class="container__inputs__form__inp" type="text" name="img" id="img" placeholder="Image adress">
             <!-- <input type="text" name="genre" id="genre" placeholder="Book genre" > -->
             <select class="container__inputs__form__inp" name="genre" id="">
