--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/store.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/store.html
@@ -10,8 +10,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <script src="https://kit.fontawesome.com/cec039267b.js" crossorigin="anonymous"></script>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    
     <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&family=Montserrat:wght@100;200&display=swap"
         rel="stylesheet">
 
