--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -24,13 +24,13 @@
         <input id="price" type="number" name="price" placeholder="item-price">
         <input type="text" name="img" id="img" placeholder="img">
         
-        <select id="selectDepartment">
+        <!-- <select id="selectDepartment">
             <option value="" disabled selected>Choose a department</option>
             <option value="clothes">clothes</option>
             <option value="watches">watches</option>
             <option value="jewelry">jewelry</option>
             <option value="bags">bags</option>
-        </select>
+        </select> -->
         <select id="selectGender">
             <option value="" disabled selected>Choose a gender</option>
             <option value="men">men</option>
