--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -241,13 +241,13 @@
 
             <div class="catergory__buttons--lowerThanPrice">
                 <label>Show price lower than</label>
-                <input class="inputLowerThan" type='number' onkeyup="handleFilterByPrice(event)" placeholder="number">
+                <input class="inputLowerThan" type='number' onkeyup="handleFilterByPrice(event)" placeholder="number" data-gender="women">
             </div>
 
 
-            <select class="catergory__buttons--selector" onchange='handleSelect(event)' data-gender="women">
+            <select class="catergory__buttons--selector" onchange='handleSelect(event)' data-gender="women" >
                 <option value="" disabled selected>Category</option>
-                <option value="allWomen">ALL</option>
+                <option value="all">ALL</option>
                 <option value="dresses">DRESSES</option>
                 <option value="sweaters">SWEATERS</option>
                 <option value="boots">BOOTS</option>
@@ -256,8 +256,8 @@
             </select>
 
             <div class="catergory__buttons--sortPrice">
-                <button type="button" id="ascending" onclick="handlePriceAsc(event)">Price-Low to High</button>
-                <button type="button" id="descending" onclick="handlePriceDesc(event)">Price-High to Low
+                <button type="button" id="ascending" onclick="handlePriceAsc(event)" data-gender="women">Price-Low to High</button>
+                <button type="button" id="descending" onclick="handlePriceDesc(event)" data-gender="women">Price-High to Low
                 </button>
             </div>
 
